2008-02-16  Jim Huang  <jserv.tw@gmail.com>

	* src/qqwryseeker/qqwryseeker.c,
	src/core/proxy.c,
	src/core/proxy.h,
	src/view/telnetcon.h,
	src/view/telnetcon.cpp,
	src/script/api.h,
	src/script/script.cpp,
	src/nancy_bot/msgdata.cpp,
	src/nancy_bot/msgdata.h,
	src/nancy_bot/botutil.h,
	src/nancy_bot/nancybot.cpp: Use consistent GPL licensing terms.

2008-02-16  Jim Huang  <jserv.tw@gmail.com>

	* src/conn_xpm.xpm,
	src/pcmanx_inverse_xpm.xpm,
	src/pcmanx_xpm.xpm: Added "const" modifier to turn off annoying
	warnings.

2008-02-16  Jim Huang  <jserv.tw@gmail.com>

	* Doxygen.in: Fixlet to PROJECT_NAME since we have renamed.

2008-02-16  Jim Huang  <jserv.tw@gmail.com>

	* src/mainframe.cpp (CMainFrame::OnAbout): Mention Jason Xia.

	* po/zh_TW.po,
	po/zh_CN.po: Likewise.

2008-02-16  Jim Huang  <jserv.tw@gmail.com>

	* configure.ac: Added linker optimizations for GNU toolchain.

2008-01-28  Jim Huang  <jserv.tw@gmail.com>

	* po/zh_TW: Added translations for iplookup.

2008-01-28  Jason Xia  <jasonxh@gmail.com>

	* src/view/telnetview.cpp (CTelnetView::OnMouseMove): Use i18n for
	strings of iplookup.

	* po/zh_CN.po, po/zh_TW: Update line numbers and add
	translations(zh_CN) for strings of iplookup.

2008-01-28  Jason Xia  <jasonxh@gmail.com>

	* configure.ac, src/Makefile.am: Make IP location lookup a
	configurable feature. Disabled by default.

	* src/core/termdata.cpp (CTermData::CTermData) (CTermData::~CTermData)
	(CTermData::UpdateDisplay) (DetectIpPatterns)
	(CTermData::DetectIpAddrs), src/core/termdata.h,
	src/view/telnetview.cpp (CTelnetView::CTelnetView)
	(CTelnetView::~CTelnetView) (ipstr2int) (CTelnetView::OnMouseMove):
	Respect configure options about iplookup.

2008-01-28  Jim Huang  <jserv.tw@gmail.com>

	* src/core/proxy.c,
	src/core/proxy.h:  Use consistent GPL licensing terms.

2008-01-28  Jason Xia  <jasonxh@gmail.com>

	* src/core/proxy.c, src/core/proxy.h: New files.
	A simple proxy client implementation. Currently support SOCKSv4 and